--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Poiret+One&family=Sacramento&display=swap');
 
 body {
+  width: 100vw;
+  height: 100vh;
   margin: 0;
   padding 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: black;
   background-image: url("https://images.unsplash.com/photo-1502989642968-94fbdc9eace4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2734&q=80");
   background-position: center;
@@ -13,11 +18,8 @@ body {
   font-size: 16px;
 
   color: white;
-  display: flex;
-  width: 100vw;
-  height: 100vh;
-  align-items: center;
-  justify-content: center;
+
+  overflow: hidden;
 }
 
 #app {
@@ -26,13 +28,13 @@ body {
   justify-content: center;
   flex-basis: 1rem;
   flex: 1;
-  height: calc(90vh - 1rem);
   flex-direction: column;
+  height: calc(90vh - 1rem);
 }
 
 #app>h1 {
   font-family: 'Poiret One', sans-serif;
-  font-size: 3rem;
+  font-size: 3em;
 
   text-align: center;
   margin-top: 0;
@@ -45,34 +47,36 @@ body {
   flex-wrap: wrap;
 }
 
-@media screen and (max-width: 895px) {
+@media screen and (max-width: 705px) {
+
   .game-info {
     visibility: hidden;
   }
 }
 
-@media screen and (min-width: 896px){
+@media screen and (min-width: 706px){
   .game-info {
     visibility: visible;
   }
 }
 
 .game-info {
+  width: clamp(10em, 95vw, 15em);  
   height: 50%;
-  margin: 0 3rem;
-  align-items: top;
+  margin: 0 1em;
+  padding: 1em;
   display: flex;
   justify-content: start;
   align-items: center;
-  padding: 1rem;
 }
 
 .game-info>h1 {
+  font-size: 2em;
   margin: 0;
 }
 
 .game-info>p {
-  font-size: 4rem;
+  font-size: 3em;
   margin: 0.2rem 1rem;
 }
 
@@ -80,7 +84,6 @@ body {
 .grid {
   display: flex;
   flex-direction: column;
-  width: clamp(15rem, 95vw, 25rem);
   border-radius: 5px;
   overflow: hidden;
   background: rgba(0,0,0,0.5);
@@ -88,6 +91,7 @@ body {
 }
 
 .grid {
+  width: clamp(15rem, 95vw, 25rem);
   height: clamp(30rem, calc(90vh - 10rem), 75vh);
 }
 
@@ -111,15 +115,36 @@ body {
               inset 2px 2px 4px rgba(255,255,255,0.75);
 }
 
-.over {
+.start-screen {
+  background: gray;
+  background-image: url('https://images.unsplash.com/photo-1540205218737-b2045c86fad0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1960&q=80');
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  height: 100%;
+  width: 100%;
+}
+
+.start-screen *{
+  z-index: 1;
+  opacity: 1;
+}
+.end-screen {
+  background: gray;
+  background-image: url('https://images.unsplash.com/photo-1531171074112-291d5807273d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2700&q=80');
+  background-size: cover;
+  background-position: center;
+  justify-content: space-between;
+}
+
+.cover {
   transition: 0.5s flex ease-in;
   bottom: 0;
   width: calc(100% - 4rem);
   display: inline-flex;
   flex-direction: column-reverse;
-  background: gray;
   align-items: center;
-  font-size: 6rem;
+  font-size: 4em;
   text-align: center;
   font-family: 'Sacramento';
   line-height: 0.85em;
@@ -133,7 +158,7 @@ body {
   height: 0;
 }
 
-.over.full {
+.cover.full {
   flex: 1;
 }
 
